Use more switch expressions; other refactoring/code cleanup
Signed-off-by: Jason Winning <jason.winning@gmail.com>