@@ -20,7 +20,6 @@ package org.hypernomicon.bib.mendeley;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -335,7 +334,7 @@ public class MendeleyDocument extends BibEntry<MendeleyDocument, MendeleyFolder>
     {
       switch (bibFieldEnum)
       {
-        case bfTitle : return Collections.singletonList(getWork().name());
+        case bfTitle : return List.of(safeStr(getWork().name()));
         case bfISBNs : return getWork().getISBNs();
         case bfMisc  : return convertMultiLineStrToStrList(getWork().getMiscBib(), true);
         default      : break;
